# Fast_Api

./: pyproject.toml
fast_api/: app.py  schemas.py
tests/: test_app.py
