[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Álvaro Chaves da Silva",email = "alvaro.chaves@escolar.ifrn.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
